Release 0.3.0:
- add Ocf.Wrapper.bool and Ocf.bool to create options with boolean values

Release 0.2.0:
- (ppx) fix: do not build empty value declarations
- add Ocf.set
- add Ocf.Wrapper.of_ok_error